--- a/PracticalTest01Var05/app/src/main/res/layout/activity_practical_test01_var05_main.xml
+++ b/PracticalTest01Var05/app/src/main/res/layout/activity_practical_test01_var05_main.xml
@@ -1,18 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".PracticalTest01Var05MainActivity">
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="right"
+        android:text="@string/next_activity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </Button>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="346dp">
+
+        <Button
+            android:id="@+id/center_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="171dp"
+            android:layout_marginBottom="146dp"
+            android:gravity="center"
+            android:text="@string/center" />
+
+
+        <Button
+            android:id="@+id/top_left_button"
+            android:layout_width="78dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/center_button"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="29dp"
+            android:layout_marginEnd="107dp"
+            android:layout_marginBottom="30dp"
+            android:text="@string/top_left" />
+
+        <Button
+            android:id="@+id/top_right_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/center_button"
+            android:layout_alignBottom="@+id/center_button"
+            android:layout_marginStart="116dp"
+            android:layout_marginBottom="72dp"
+            android:text="@string/top_right" />
+
+        <Button
+            android:id="@+id/bottom_left_button"
+            android:layout_width="103dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/center_button"
+            android:layout_marginStart="-263dp"
+            android:layout_marginBottom="-155dp"
+            android:layout_toEndOf="@+id/center_button"
+            android:text="@string/bottom_left" />
+
+        <Button
+            android:id="@+id/bottom_right_button"
+            android:layout_width="98dp"
+            android:layout_height="65dp"
+            android:layout_alignBottom="@+id/center_button"
+            android:layout_marginStart="37dp"
+            android:layout_marginBottom="-111dp"
+            android:layout_toEndOf="@+id/center_button"
+            android:text="@string/bottom_right" />
+
+
+    </RelativeLayout>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:editable="false"/>
+
+</LinearLayout>
