--- a/PracticalTest01Var05/app/src/main/res/layout/activity_practical_test01_var05_main.xml
+++ b/PracticalTest01Var05/app/src/main/res/layout/activity_practical_test01_var05_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PracticalTest01Var05MainActivity">
+    tools:context=".view.PracticalTest01Var05MainActivity">
 
     <Button
         android:layout_width="wrap_content"
@@ -76,6 +76,7 @@
     </RelativeLayout>
 
     <EditText
+        android:id="@+id/buttons_pressed_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:editable="false"/>
