--- a/PracticalTest01Var05/app/src/main/res/layout/activity_practical_test01_var05_main.xml
+++ b/PracticalTest01Var05/app/src/main/res/layout/activity_practical_test01_var05_main.xml
@@ -8,6 +8,7 @@
     tools:context=".view.PracticalTest01Var05MainActivity">
 
     <Button
+        android:id="@+id/next_activity_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
